# cheri-cap-lib

./: .gitignore  CHERICC.bsv  CHERICC128Cap.bsv  CHERICC_Fat.bsv  CHERICap.bsv  CHERICapProps.bsv  CHERICapWrap.bsv  CHERICapWrap.py  CHERICapWrapBlarney.py  CHERI_CAP_API.adoc  CMakeLists.txt  Capability128ccLibs.bsv  Makefile  assertions.sv  check.sby  flake.nix  readme.adoc  readme.md  sim_main.cpp  zcheri_pkg.sv
.github/workflows/: check-prop.yml
fusesoc/: cheri-cap-lib-test.core  cheri-cap-lib-verilog-generator.core  fusesoc-script.py
